<resources>
    <string name="app_name">TripleLDC</string>
    <string name="action_settings">Data Export</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="error_dialog_title">错误提示</string>
    <string name="normal_dialog_title">提示</string>
    <string name="permission_request_dialog_title">权限申请</string>
    <string name="dialog_accept">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="default_text">...</string>


    <!-- title -->
    <string name="main_title">Lane-Change Detection</string>

    <!-- main page -->
    <string name="data_collection">Data\nCollection</string>
    <string name="localization">Tracking</string>

    <!-- data collect preconfig -->
    <string name="device_name">设备名称:</string>
    <string name="is_upload_data">上传数据:</string>
    <string name="use_test_server">使用测试服务器:</string>
    <string name="sensor_frequency_config">传感器频率:</string>
    <string name="data_sample_interval">采样间隔(ms):</string>
    <string name="data_upload_interval">上传间隔(ms):</string>
    <string name="max_re_upload_times">最大重传次数:</string>

    <!-- data collect control -->
    <string name="start_collect">Start</string>
    <string name="data_collecting">Collecting</string>
    <string name="left_lane_changed">L-Lane Changed</string>
    <string name="right_lane_changed">R-Lane Changed</string>
    <string name="lane_change_finish">Lane Change Finish</string>

    <string name="data_exporting">数据导出中...</string>
    <string name="export_dataset">导出传感器数据</string>
    <string name="clear_dataset">清空传感器数据库</string>

    <!-- data collect display -->
    <string name="default_data_value">--</string>
    <string name="acceleration_describe">加速度</string>
    <string name="acceleration_x_describe">x轴加速度</string>
    <string name="acceleration_y_describe">y轴加速度</string>
    <string name="acceleration_z_describe">z轴加速度</string>
    <string name="gyroscope_describe">角速度</string>
    <string name="gyroscope_x_describe">x轴角速度</string>
    <string name="gyroscope_y_describe">y轴角速度</string>
    <string name="gyroscope_z_describe">z轴角速度</string>
    <string name="gps_describe">GPS</string>
    <string name="gps_longitude_describe">经度</string>
    <string name="gps_latitude_describe">维度</string>

    <!-- data export -->
    <string name="data_export_title">Data Export</string>


</resources>