<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_acceleration_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawable_powderblue_rectangle_background"
        android:contentDescription="@string/acceleration_describe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.1">
    </ImageView>

    <ImageView
        android:id="@+id/img_acceleration_x_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_royalblue_rectangle_background"
        android:contentDescription="@string/acceleration_x_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_background"
        app:layout_constraintVertical_bias="0.2">
    </ImageView>

    <ImageView
        android:id="@+id/img_acceleration_y_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_royalblue_rectangle_background"
        android:contentDescription="@string/acceleration_y_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_background"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.2">
    </ImageView>

    <ImageView
        android:id="@+id/img_acceleration_z_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_royalblue_rectangle_background"
        android:contentDescription="@string/acceleration_z_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_background"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.8">
    </ImageView>

    <TextView
        android:id="@+id/text_acceleration_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_x_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_x_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_x_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_x_background">
    </TextView>

    <TextView
        android:id="@+id/text_acceleration_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_y_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_y_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_y_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_y_background">
    </TextView>

    <TextView
        android:id="@+id/text_acceleration_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_acceleration_z_background"
        app:layout_constraintEnd_toEndOf="@+id/img_acceleration_z_background"
        app:layout_constraintStart_toStartOf="@+id/img_acceleration_z_background"
        app:layout_constraintTop_toTopOf="@+id/img_acceleration_z_background">
    </TextView>

    <!-- gyro data display -->

    <ImageView
        android:id="@+id/img_gyro_background"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/drawable_royalblue_rectangle_background"
        android:contentDescription="@string/gyroscope_describe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.9">
    </ImageView>

    <ImageView
        android:id="@+id/img_gyro_x_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_powderblue_rectangle_background"
        android:contentDescription="@string/gyroscope_x_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_background"
        app:layout_constraintVertical_bias="0.2">
    </ImageView>

    <ImageView
        android:id="@+id/img_gyro_y_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_powderblue_rectangle_background"
        android:contentDescription="@string/gyroscope_y_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_background"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.2">
    </ImageView>

    <ImageView
        android:id="@+id/img_gyro_z_background"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_powderblue_rectangle_background"
        android:contentDescription="@string/gyroscope_z_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_background"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.8">
    </ImageView>

    <TextView
        android:id="@+id/text_gyro_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_x_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_x_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_x_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_x_background">
    </TextView>

    <TextView
        android:id="@+id/text_gyro_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_y_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_y_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_y_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_y_background">
    </TextView>

    <TextView
        android:id="@+id/text_gyro_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gyro_z_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gyro_z_background"
        app:layout_constraintStart_toStartOf="@+id/img_gyro_z_background"
        app:layout_constraintTop_toTopOf="@+id/img_gyro_z_background">
    </TextView>

    <!-- gps data display -->

    <ImageView
        android:id="@+id/img_gps_background"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/drawable_darkkhaki_rectangle_background"
        android:contentDescription="@string/gps_describe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5">
    </ImageView>

    <ImageView
        android:id="@+id/img_gps_longitude_background"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_darkseagreen_rectangle_background"
        android:contentDescription="@string/gps_longitude_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_gps_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gps_background"
        app:layout_constraintStart_toStartOf="@+id/img_gps_background"
        app:layout_constraintTop_toTopOf="@+id/img_gps_background"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.5">
    </ImageView>

    <ImageView
        android:id="@+id/img_gps_latitude_background"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:src="@drawable/drawable_darkseagreen_rectangle_background"
        android:contentDescription="@string/gps_latitude_describe"
        app:layout_constraintBottom_toBottomOf="@+id/img_gps_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gps_background"
        app:layout_constraintStart_toStartOf="@+id/img_gps_background"
        app:layout_constraintTop_toTopOf="@+id/img_gps_background"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintHorizontal_bias="0.5">
    </ImageView>

    <TextView
        android:id="@+id/text_gps_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gps_longitude_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gps_longitude_background"
        app:layout_constraintStart_toStartOf="@+id/img_gps_longitude_background"
        app:layout_constraintTop_toTopOf="@+id/img_gps_longitude_background">
    </TextView>

    <TextView
        android:id="@+id/text_gps_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/default_data_value"
        android:textColor="@color/cyan"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gps_latitude_background"
        app:layout_constraintEnd_toEndOf="@+id/img_gps_latitude_background"
        app:layout_constraintStart_toStartOf="@+id/img_gps_latitude_background"
        app:layout_constraintTop_toTopOf="@+id/img_gps_latitude_background">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>