<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:textAppearance="@style/ConfigTextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2">
    </TextView>

    <EditText
        android:id="@+id/edit_device_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/ConfigEditTextAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/text_device_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_device_name"
        app:layout_constraintHorizontal_bias="0.8">
    </EditText>

    <TextView
        android:id="@+id/text_is_upload_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_upload_data"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_device_name"
        app:layout_constraintTop_toBottomOf="@+id/text_device_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <CheckBox
        android:id="@+id/checkbox_is_upload_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_is_upload_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_is_upload_data" />

    <TextView
        android:id="@+id/text_is_use_test_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_test_server"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_is_upload_data"
        app:layout_constraintTop_toBottomOf="@+id/text_is_upload_data"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <CheckBox
        android:id="@+id/checkbox_is_use_test_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_is_use_test_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_is_use_test_server"
        app:layout_constraintHorizontal_bias="0.8">
    </CheckBox>

    <TextView
        android:id="@+id/text_sensor_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_frequency_config"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_is_use_test_server"
        app:layout_constraintTop_toBottomOf="@+id/text_is_use_test_server"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <EditText
        android:id="@+id/edit_sensor_frequency"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/ConfigEditTextAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/text_sensor_frequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_sensor_frequency"
        app:layout_constraintHorizontal_bias="0.8">
    </EditText>

    <TextView
        android:id="@+id/text_data_sample_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_sample_interval"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_sensor_frequency"
        app:layout_constraintTop_toBottomOf="@+id/text_sensor_frequency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <EditText
        android:id="@+id/edit_data_sample_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/ConfigEditTextAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/text_data_sample_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_data_sample_interval"
        app:layout_constraintHorizontal_bias="0.8">
    </EditText>

    <TextView
        android:id="@+id/text_data_upload_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_upload_interval"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_data_sample_interval"
        app:layout_constraintTop_toBottomOf="@+id/text_data_sample_interval"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <EditText
        android:id="@+id/edit_data_upload_interval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/ConfigEditTextAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/text_data_upload_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_data_upload_interval"
        app:layout_constraintHorizontal_bias="0.8">
    </EditText>

    <TextView
        android:id="@+id/text_max_re_upload_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_re_upload_times"
        android:textAppearance="@style/ConfigTextAppearance"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_data_upload_interval"
        app:layout_constraintTop_toBottomOf="@+id/text_data_upload_interval"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
    </TextView>

    <EditText
        android:id="@+id/edit_max_re_upload_times"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/ConfigEditTextAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/text_max_re_upload_times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_max_re_upload_times"
        app:layout_constraintHorizontal_bias="0.8">
    </EditText>

    <ImageView
        android:id="@+id/img_enter_background"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/drawable_darkseagreen_rectangle_background"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_max_re_upload_times"
        app:layout_constraintVertical_bias="0.0">
    </ImageView>

    <TextView
        android:id="@+id/text_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/dialog_accept"
        android:textAppearance="@style/ConfigEnterAppearance"
        app:layout_constraintBottom_toBottomOf="@+id/img_enter_background"
        app:layout_constraintEnd_toEndOf="@+id/img_enter_background"
        app:layout_constraintStart_toStartOf="@+id/img_enter_background"
        app:layout_constraintTop_toTopOf="@+id/img_enter_background">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
